@@ -1,3 +1,14 @@
+2008-07-31  Erik Bunce  <elbunce@thehive.com>
+
+        Reviewed by Simon.
+
+        Add simple edit test abilities to QtLauncher.
+
+        * QtLauncher/main.cpp:
+        (MainWindow::MainWindow):
+        (MainWindow::setEditable):
+        (MainWindow::dumpHtml):
+
 2008-07-31  Alexey Proskuryakov  <ap@webkit.org>
 
         Rubber-stamped by Maciej.
